--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,7 +14,7 @@ spring:
             non_contextual_creation: true
   datasource:
     platform: postgres
-    url: jdbc:postgresql://localhost:5432/nostra
+    url: jdbc:postgresql://13.212.183.159:5432/nostra
     username: nostra
     password: welcome1
     hikari:
